# cppspec

./: .cproject  .project  CMakeLists.txt  README  runtests.sh
examples/: CMakeLists.txt  ContainmentSpec.h  InterfaceSpec.h  Makefile  RegExSpec.h  SpecTest.cpp  StackSpec.h  cmake_install.cmake
include/: BeType.h  Behavior.h  BoostTimer.h  ConsoleOutputStream.h  ContextHolder.h  CppSpec.h  CppSpecConfig.h  CuteReporter.h  Expectation.h  FileOutputStream.h  Functor.h  Invocation.h  InvocationResult.h  InvokingType.h  JUnitReporter.h  Matcher.h  OutputStream.h  Reporter.h  Runnable.h  ShouldType.h  SpecDoxReporter.h  SpecResult.h  SpecRunner.h  Specification.h  SpecificationBase.h  SpecificationRegistry.h  SpecifyFailedException.h  ThreadPool.h  Timer.h  TypeHasStreamingOperator.h  TypeNameResolver.h
include/Needle/: Binder.h  Inject.h  NeedleTypeNameResolver.h
src/: BoostTimer.cpp  CMakeLists.txt  ConsoleOutputStream.cpp  CuteReporter.cpp  FileOutputStream.cpp  JUnitReporter.cpp  Matcher.cpp  SpecDoxReporter.cpp  SpecResult.cpp  SpecRunner.cpp  SpecificationRegistry.cpp  Timer.cpp  Util.cpp
test/: BoostTimerTest.cpp  CMakeLists.txt  CuteReporterTest.cpp  DummyReporter.cpp  DummyReporter.h  ExceptionThrowingSpecificationTest.cpp  ExpectationTest.cpp  InvocationTest.cpp  InvokingTypeTest.cpp  JUnitReporterTest.cpp  MatcherTest.cpp  OutputStreamStub.h  SpecDoxReporterTest.cpp  SpecRunnerTest.cpp  SpecificationRegistryTest.cpp  SpecificationTest.cpp  StubRunnable.h  TimerStub.h  TypeHasStreamingOperatorTest.cpp  VoidSpecification.cpp  main.cpp
